@@ -118,18 +118,6 @@ The gas tank is currently 50% full.
 ...etc...
 ```
 
-### Extra credit
-
-Create two more "drunk driver" mopeds that drive themselves around erratically one block at a time.
-
-- Drunk driver mopeds must be instantiated from the same class as user-driven mopeds. Your job is to modify the code in this class to allow for both kinds of mopeds.
-- These robotic self-driving mopeds should automatically follow a random path, or any path you design for them, as they move one block at a time around Manhattan.
-- Drunk driver mopeds perform all the same behaviors as user-driven mopeds, except they do so without human intervention.
-- Drunk driver mopeds use gas like the user's moped, but they never run out of gas - they automatically fill up their gas when they are nearly out of gas.
-- Drunk driver mopeds never crash into each other. They only crash into the user's moped.
-- If the user's moped and either of the robotic mopeds are at the same location at the same time, they should crash into each other and the user should be notified that their moped has crashed, is totally unusable, and the program should quit.
-- Like the human-driven moped, each drunk driver moped must announce its location and orientation after every move. All output in this version must clearly identify which moped is at which position.
-
 ## Folder structure
 
 This project has several important directories:
@@ -156,25 +144,7 @@ If you have trouble running the tests from within Visual Studio Code, you can do
 java -cp "bin:lib/*" org.junit.runner.JUnitCore edu.nyu.cs.TestClassName
 ```
 
-Windows users should replace the `:` in `"bin:lib/*"` with a semi-colon, `;`, i.e. `"bin;lib/*"`
+Windows users should replace the `:` in `"bin:lib/*"` with a semi-colon, `;`, i.e. `"bin;lib/*"`. You may also have to add the flag --enable-preview in front of java to make it work.
 
 ## How to submit this assignment
-
-Once you have completed the changes to th assignment, you are ready to submit it. Do this from within Visual Studio Code.
-
-1. Click on the `Source Control` icon in the left activity bar in Visual Studio Code.
-1. In the Source Control side bar, you will see a field named `Message` - type in a unique message about what you have done, e.g. "_Finished assignment!_" or whatever you want to write as a short note to yourself.
-1. Hover over the words `Source Control`. You will see a `...` icon appear - click it to see a menu. In that menu, click `Commit`->`Commit`. This logs the changes you've made to the Git project - remember Git is used to keep track of changes.
-1. Go to the same menu and click `Push` to submit your assignment - this uploads your updated files to the copy of your respository on GitHub.
-
-![Push changes to GitHub](./images/how_to_push_changes_to_github_from_vscode.png)
-
-That's it... you're done.
-
-## Double-check your submission
-
-Prove to yourself that you have correctly submitted by viewing your repository on the GitHub website - you should see your completed README.md file there.
-
-## Resubmit as many times as you want
-
-You can re-submit as many times as you want before the deadline. Just make changes to the files on your own computer and repeat the process outlined above to upload them to GitHub.
+Submit on Brightspace a zip file named "A5_complete_NYUnetID" containing your project folder called "A5_project_directory_NYUnetID", where NYUnetID should be replaced with your actual NYU net ID. The project folder should contain your source code and compiled code within the src and bin folders. It should also contain the same test folder as was when you download the assignment 5 zip file.
